[package]
name = "crrshrr"
version = "0.1.0"
edition = "2021"
authors = ["LASHLIGHT <lashlight@proton.me>"]
license = "GPL-3.0-or-later"
homepage = ""
description = "A simple bit crusher."

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }
# Uncomment the below line to disable the on-by-default VST3 feature to remove
# the GPL compatibility requirement
# nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", default_features = false, features = ["assert_process_allocs"] }
rand = "0.8.5"
# nih_plug_vizia = { path = "../nih-plug/nih_plug_vizia" }
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug.git" }

# [profile.release]
# lto = "thin"
# strip = "symbols"

# [profile.profiling]
# inherits = "release"
# debug = true
# strip = "none"
